feat(testing): improve quality of unit tests and add implementation tests